# unitree_rl_mjlab_viser

./: .gitignore  README.md  pyproject.toml  start.sh
docs/: plan_thread_decouple.md
scripts/: install_env.sh  sim_viser.sh  train_viser.sh
src/unitree_viser/: __init__.py  cli.py
src/unitree_viser/render/: __init__.py  async_render.py  shared_state.py  term_plots.py  viser_setup.py
src/unitree_viser/sim/: __init__.py  command_injection.py  dds_command_injection.py  sim_viewer.py
src/unitree_viser/train/: __init__.py  runner_subclass.py  training_controller.py
tests/: conftest.py  end_to_end_test.py  test_async_render_unit.py  test_cli_integration.py  test_cli_unit.py  test_command_injection_unit.py  test_dds_command_injection_unit.py  test_learn_fallback.py  test_render_lazy_import_unit.py  test_render_loop.py  test_runner_subclass_unit.py  test_sim_viewer_integration.py  test_sim_viewer_unit.py  test_smoke.py  test_smoke_integration.py  test_term_plots_unit.py  test_training_controller_unit.py  test_viser_setup_unit.py
