[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitree_rl_mjlab_viser"
version = "0.1.0"
description = "Viser-based browser visualization for unitree_rl_mjlab training and simulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Unitree RL Mjlab Viser Contributors" }
]
keywords = ["reinforcement-learning", "robotics", "mujoco", "viser", "unitree"]

# 核心依赖: 复用上游 unitree_rl_mjlab + mjlab, 不在 mjlab 内部改动
dependencies = [
    "viser>=0.2.0",
    "tyro>=0.9.0",
    "torch>=2.0",          # 具体 wheel 由 install_env.sh 选择 (GPU: +cu128, CPU: +cpu)
    "numpy",
    "scipy>=1.11.0",              # mjlab.terrains 隐式依赖
    "mujoco>=3.5.0,<3.6.0",       # mjlab 物理后端
    "warp-lang>=1.12.0,<1.13.0",  # mjlab 底层 GPU/CPU kernel 引擎
    "setuptools<82",              # PyTorch 2.11.0+cu128 要求; pin 防止 setuptools 升级到不兼容版本
    "mjlab==1.2.0",
    "mujoco-warp==3.5.0",
    # 上游 unitree_rl_mjlab 由 start.sh/install_env.sh 单独 editable 安装
    # (见 README 安装步骤),不在这里声明,避免 pip 解析路径错误
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
unitree-viser = "unitree_viser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["unitree_viser*"]

[tool.setuptools.package-data]
unitree_viser = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
